<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football pitches Tfe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_county">Select a county</string>
    <string name="title_activity_fields_list">Select the pitch</string>
    <string name="select_field">Please select a pitch</string>
    <string name="select_field_in">Please select a pitch in</string>
    <string name="phoneLabel">Phone: </string>
    <string name="title_activity_field_detail">Football Pitch</string>
    <string name="howToGet">How to get from</string>
    <string name="enterPlace">Please enter your address</string>
    <string name="title_activity_route">Route</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="route_description">Route description</string>
    <string name="route_map">Map</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_label">Football Pitches Tenerife</string>
    <string name="search_hint">Search football pitch</string>
    <string name="title_activity_searchable">Search Pitch</string>
    <string name="search">Search</string>
    <string name="title_activity_street_view">Street View</string>
    <string name="title_activity_animate_route">Animate Route</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="show_street_view">Show street view</string>
    <string name="last_path_point">You have reached the final position of the route</string>
    <string name="finished">Finished</string>
    <string name="poweredGoogle">Powered by Google</string>
    <string name="no_panorama">Unfortunately, the street view cannot be found for this location</string>
    <string name="route_to">Route to %1$s</string>
    <string name="title_activity_street_view_route_step">StreetViewRouteStepActivity</string>
    <string name="title_activity_manage_places">My Places</string>
    <string name="action_places">My Places</string>
    <string name="play_service_missing">Google Play Services is missing</string>
    <string name="play_service_updating">Google Play Services is updating. Try later.</string>
    <string name="play_service_update_required">Google Play Services requires update</string>
    <string name="play_service_disabled">Google Play Services is disabled</string>
    <string name="play_service_invalid">Google Play Services is invalid</string>
    <string name="place_alredy_in_list">Place: %1$s is already in the list of stored places</string>
    <string name="place_added_to_list">Place: %1$s has been added to the list of stored places</string>
    <string name="place_id_value">Place ID: %1$s</string>
    <string name="remove_place">Remove place</string>
    <string name="are_you_sure">Are you sure to remove %1$s?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_select_place">Select Place</string>
    <string name="select_stored_place">Or select from your places</string>
    <string name="save_this_place">Would you like to save %1$s?</string>
    <string name="author_name">Author: Xomena (www.xomena.com)</string>
    <string name="issue_tracker">Please report issues or feature requests on https://github.com/andreyh13/CmpFutbolTfe/issues</string>
    <string name="app_copyright">©Xomena 2015-2016</string>
    <string name="about">About</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="main_activity_tabs">Main activity tabs</string>
    <string name="main_activity_pager">Main activity pager</string>
    <string name="on_move_position">On Move Position</string>
    <string name="show_pitch_directions">Show pitch directions</string>
    <string name="show_pitch_street_view">Show pitch street view</string>
    <string name="add_place">Add place</string>
    <string name="pager">Pager</string>
    <string name="tabs">Tabs</string>
</resources>
