<?xml version="1.0" encoding="utf-8"?>

<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:padding="12dp">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id = "@+id/about_image"
        android:src="@drawable/ic_stadion"
        android:contentDescription="@string/app_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/about_image"
        android:layout_toEndOf="@id/about_image"
        android:text = "@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/about_title"
        android:textColor="@color/md_green_500"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/about_image"
        android:layout_toEndOf="@id/about_image"
        android:layout_below="@id/about_title"
        android:text = "@string/author_name"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:id = "@+id/about_author"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/about_image"
        android:layout_toEndOf="@id/about_image"
        android:layout_below="@id/about_author"
        android:text = "@string/issue_tracker"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:id = "@+id/about_issues"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/about_image"
        android:layout_toEndOf="@id/about_image"
        android:layout_below="@id/about_issues"
        android:text = "@string/app_copyright"
        android:textSize="12sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:id = "@+id/about_copyright"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_copyright"
        android:id = "@+id/about_button"
        android:theme="@style/AppTheme"
        android:text="@string/ok"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorWhite"
        android:textColor="@color/md_green_500"
        />

</androidx.percentlayout.widget.PercentRelativeLayout>