<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="com.xomena.cmpfutboltfe.SelectPlaceActivity"
    tools:showIn="@layout/activity_select_place">

    <AutoCompleteTextView
        android:id="@+id/fieldFindPlace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterPlace"
        android:ems="10"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/powered_by_google_light"
        android:contentDescription="@string/poweredGoogle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/fieldSelectMyPlace"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/select_stored_place"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectPlace"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
