<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetails"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary">
            <TextView
                android:id="@+id/toolbar_title_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_label"
                android:textColor="@android:color/white"
                style="@style/Toolbar.TitleText"
                android:layout_gravity="center"
                />
        </androidx.appcompat.widget.Toolbar>

        <fragment
            android:id="@+id/ff_map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_pitch_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_directions"
        android:clickable="true"
        android:onClick="onShowPitchDirections"
        app:layout_anchor="@id/ff_map"
        app:layout_anchorGravity="bottom|right|end"
        android:contentDescription="@string/show_pitch_directions"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_pitch_street_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/streetview"
        android:clickable="true"
        android:onClick="onShowPitchStreetView"
        app:layout_anchor="@id/ff_map"
        app:layout_anchorGravity="bottom|right|end"
        android:contentDescription="@string/show_pitch_street_view"
        android:focusable="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
